# fp-edge-canonical

./: README.md
code/: README.md  tox.ini
code/prometheus-k8s-operator/: README.md  pyproject.toml  tox.ini
code/prometheus-k8s-operator/src/charms/prometheus_k8s/v0/: prometheus_scrape.py
code/prometheus-k8s-operator/src/charms/traefik_k8s/v1/: ingress_per_unit.py
code/prometheus-k8s-operator/src/step1_baseline/: charm.py
code/prometheus-k8s-operator/src/step2_functional/: apply.py  charm.py  compute.py  errors.py  fetch.py  pipeline.py  result.py  result_combinators.py  type_defs.py
code/prometheus-k8s-operator/tests/unit/: test_result.py
code/src/: pipeline_example.py
code/src/charms_examples/charms/alertmanager_k8s/v1/: alertmanager_dispatch.py
code/src/charms_examples/charms/tls_certificates_interface/v4/: tls_certificates.py
code/src/charms_examples/hands_on/step2_functional/: action_types.py  apply.py  charm.py  compute.py  error_types.py  errors_handling.py  fetch.py  process.py  type_defs.py
code/src/charms_examples/step1_baseline/: charm.py
code/src/charms_examples/step2_functional/: action_types.py  actions_impl.py  apply.py  charm.py  compute.py  error_types.py  errors_handling.py  fetch.py  fetch_impl.py  input_types.py  output_types.py  process.py
code/src/step1_baseline/: charm.py
code/src/step2_functional/: charm.py
code/src/user_states_example/: user_states_example1.py  user_states_example2.py
presentation/: presentation.html  style.css
